[package]
name = "bb8-rusqlite"
version = "0.1.0"
description = "A bb8 connection manager for rusqlite"
authors = ["Adam Harvey <adam@adamharvey.name>", "Rajeev Athreya Jawaji <rajeevjawaji@gmail.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/reji-zero/bb8_sqlite" 

[dependencies]
async-trait = "0.1"
bb8 = "0.8"
rusqlite = "0.28"
thiserror = "1"
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }

[dev-dependencies]
anyhow = "1"
futures = "0.3"
tempfile = "3"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }

[dev-dependencies.rusqlite]
features = ["bundled"]
